--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS';
             background-image: url('background.jpg');
             background-size: cover;
             background-position: center;
